test/ll_parser_explicit_subexpression_test.test
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
BRACKETED EXPRESSION: This is a line; line 11:
This is a line;
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: This is a line containing a quoted string .;
    line 12:
This is a line containing a "quoted string".
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This is a line containing a large number 12345678901234567890 .;
    lines 13-14:
This is a line containing a large number
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     12345678901234567890.
^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: (hi there); line 16:
     ( hi there ).
     ^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This is a line containing a parenthesized subexpression (hi there) .;
    lines 15-16:
This is a line containing a parenthesized subexpression
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     ( hi there ).
^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY ``'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: {p q}; line 18:
     (x + `y z {p q}' - [ g h ]).
               ^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<Q>'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: `y z {p q}'; line 18:
     (x + `y z {p q}' - [ g h ]).
          ^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `['
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `]'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: [g h]; line 18:
     (x + `y z {p q}' - [ g h ]).
                        ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: (x + `y z {p q}' - [g h]); line 18:
     (x + `y z {p q}' - [ g h ]).
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This line contains subsubexpressions (x + `y z {p q}' - [g h]) .;
    lines 17-18:
This line contains subsubexpressions
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + `y z {p q}' - [ g h ]).
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
ERROR: missing closing bracket `}' inserted before line 20:
     (x + { y z )
                ^
BRACKETED EXPRESSION: {y z}; line 20:
     (x + { y z )
          ^^^^^
BRACKETED EXPRESSION: (x + {y z}); line 20:
     (x + { y z )
     ^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This line contains a missing closing bracket (x + {y z});
    lines 19-20:
This line contains a missing closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + { y z )
^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
ERROR: spurious closing bracket `}' found and ignored; line 22:
     (x + y }
            ^
ERROR: missing closing bracket `)' inserted before line 22:
     (x + y }
             ^
BRACKETED EXPRESSION: (x + y); line 22:
     (x + y }
     ^^^^^^
BRACKETED EXPRESSION:
    This line contains an incorrect closing bracket (x + y);
    lines 21-22:
This line contains an incorrect closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + y }
^^^^^^^^^^^
ERROR: lexeme indent 1 too near paragraph indent 0; line 24:
 a token with insufficient indent
 ^
BRACKETED EXPRESSION:
    This line includes a token with insufficient indent; lines 23-24:
This line includes
^^^^^^^^^^^^^^^^^^
 a token with insufficient indent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: First line .; line 26:
   First line.
   ^^^^^^^^^^^
BRACKETED EXPRESSION: Second line .; line 27:
   Second line.
   ^^^^^^^^^^^^
BRACKETED EXPRESSION: First line . Second line .; lines 25-27:
This line starts in indented paragraph:
                                      ^
   First line.
^^^^^^^^^^^^^^
   Second line.
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This line starts in indented paragraph First line . Second line .;
    lines 25-27:
This line starts in indented paragraph:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   First line.
^^^^^^^^^^^^^^
   Second line.
^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: Third line .; line 29:
   Third line.
   ^^^^^^^^^^^
BRACKETED EXPRESSION: Fourth line .; line 30:
   Fourth line.
   ^^^^^^^^^^^^
BRACKETED EXPRESSION: Third line . Fourth line .; lines 28-30:
Ditto with split =:
                  ^
   Third line.
^^^^^^^^^^^^^^
   Fourth line.
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: Ditto with split = Third line . Fourth line .;
    lines 28-30:
Ditto with split =:
^^^^^^^^^^^^^^^^^^^
   Third line.
^^^^^^^^^^^^^^
   Fourth line.
^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: Fifth line .; line 32:
   Fifth line.
   ^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
EXPLICIT SUBEXPRESSION PARSER REJECTED KEY `;'
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
BRACKETED EXPRESSION: Sixth line A; line 33:
   Sixth line A; Sixth line B
   ^^^^^^^^^^^^^
BRACKETED EXPRESSION: Sixth line B; line 33:
   Sixth line A; Sixth line B
                 ^^^^^^^^^^^^
BRACKETED EXPRESSION: Seventh line .; line 34:
   Seventh line.
   ^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    Fifth line . Sixth line A Sixth line B Seventh line .; lines 31-34:
Ditto with separator:
                    ^
   Fifth line.
^^^^^^^^^^^^^^
   Sixth line A; Sixth line B
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   Seventh line.
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    Ditto with separator
    Fifth line . Sixth line A Sixth line B Seventh line .; lines 31-34:
Ditto with separator:
^^^^^^^^^^^^^^^^^^^^^
   Fifth line.
^^^^^^^^^^^^^^
   Sixth line A; Sixth line B
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   Seventh line.
^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
EXPLICIT SUBEXPRESSION PARSER REJECTED KEY `:'
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<+'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `+>'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: <+x+>; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
       ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: {<+x+> <- y ->}; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
     ^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY ``'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<-'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `->'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: <-y->; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
                                 ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<Q>'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: `<+ x +> <-y->'; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
                        ^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    This tests selector changes : <+ x +> <- y -> {<+x+> <- y ->}
    `<+ x +> <-y->'; lines 35-36:
This tests selector changes: <+ x +> <- y ->
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     { <+ x +> <- y ->} `<+ x +> <- y ->'
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
